# dotpixi

./: .gitignore  README.md  pyproject.toml
docs/: bookshelf.md  glance.md  memo.md
docs/Android/: AOSP.md  Android.md  RaspberryPi.md  android_ndk.md  apk_lifecycle.md  ndk_native_activity.md
docs/AudioVideo/: MPRIS.md  Radio.md  m3u8.md  noise.md  pipewire.md  soundmahicne.md  video_tui.md  wave.md
docs/GIS/: QGIS.md
docs/GUI/: Desktop.md  conky.md
docs/Graphics/: StableDiffusion.md
docs/Linux/: Linux_boot.md  console.md  io_uring.md  ip.md  kernel_build.md  keymap.md  macOS.md  posix.md  root_file_system.md  runit.md  ssh.md  yocto.md
docs/OS/: POSIX.md  keyboard.md
docs/Robotics/: URDF.md
docs/conky/: conky_tui.md  conky_window.md
docs/container/: PipeWire.md  flatpack.md
docs/device/: 2JCIE-BU01.md  M5Stack.md  x13s.md  zed_camera.md
docs/drawing/: drawing.md
docs/embedded/: Arduino.md  M5Stack.md  RaspberryPi.md  audio_spectrum_analyzer.md  breadboard.md  fft_analizer.md  grovepi.md  mic.md  mini_pc.md  raspi_sensor.md  raspi_sound.md  sensor.md  volumio.md
docs/flatpak/: flatpak.md  flatpak_app.md  xdg-desktop-portal.md
docs/mail/: mailer_tui.md
docs/math/: fft.md
docs/network/: forgejo.md  gopher.md  nntp.md  pi-hole.md  wifi.md
docs/qt/: QtCore.md  qt.md  qt_arch.md  qt_cpp.md  qt_xr.md
docs/text/: awk.md  typography.md  yaml.md
docs/toolchain/: github.md
docs/tty/: tty.md
docs/web/: bookmarklet.md
docs/xr/: KWin_XR.md  hmd.md  simula.md
sync/: .bash_profile  .bashrc  .inputrc  .tmux.conf  .vimrc
sync/.w3m/: keymap
(+362 files in other folders)
