[project]
name = "dotpixi"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = ["rich>=14.0.0,<15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
dotpixi = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python -m dotpixi"
